--- a/bonus/Makefile
+++ b/bonus/Makefile
@@ -6,11 +6,11 @@
 #    By: jmabel <jmabel@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/14 19:11:05 by jmabel            #+#    #+#              #
-#    Updated: 2022/05/20 19:49:02 by jmabel           ###   ########.fr        #
+#    Updated: 2022/05/21 17:50:11 by jmabel           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME		=	../fdf
+NAME		=	../fdf_bonus
 
 HEADER		=	fdf.h
 
