--- a/mandatory/Makefile
+++ b/mandatory/Makefile
@@ -6,7 +6,7 @@
 #    By: jmabel <jmabel@student.42.fr>              +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/03/14 19:11:05 by jmabel            #+#    #+#              #
-#    Updated: 2022/05/20 19:37:52 by jmabel           ###   ########.fr        #
+#    Updated: 2022/06/11 15:48:50 by jmabel           ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,17 +27,20 @@ SRCS		=	fdf.c				map_read.c			map_error.c\
 				../get_next_line/get_next_line.c
 
 LIBFT		=	../libft/libft.a
-LMLX		=	/usr/local/lib/ -lmlx -framework OpenGL -framework Appkit
+LIBMLX		=	../libmlx/libmlx.a
 
 OBJ			=	$(SRCS:%.c=%.o)
 
 all			:	$(NAME)
 
-$(NAME)		:	$(OBJ) $(LIBFT)
-	$(CC) $(OBJ) -L ../libft -lft -L $(LMLX) -o $(NAME)
+$(NAME)		:	$(OBJ) $(LIBFT) $(LIBMLX)
+	$(CC) $(CFLAGS) $(LIBFT) $(LIBMLX) -framework OpenGL -framework AppKit $(OBJ) -o $(NAME)
 
 $(LIBFT)	:
 	make -C ../libft
+
+$(LIBMLX)	:
+	make -C ../libmlx
 
 %.o			:	%.c $(HEADER)
 	$(CC) $(CFLAGS) -c  $<  -o $@
@@ -47,6 +50,7 @@ $(LIBFT)	:
 clean		:
 	$(RM) $(OBJ) $(OBJ_CHECKER)
 	make clean -C ../libft
+	make clean -C ../libmlx
 
 fclean		: clean
 	$(RM) $(NAME) $(NAME_CHECKER)
